--- a/config/locales/helpers.ru.yml
+++ b/config/locales/helpers.ru.yml
@@ -2,7 +2,6 @@ ru:
   helpers:
     download_without_size: Скачать %{ext}
     download_with_size: Скачать %{ext} (%{size})
-    disable_with: Понеслась..
     no_divergence: Нет расхождений
     trades: Сделки (%{count})
     no_trades: Нет сделок
@@ -12,3 +11,7 @@ ru:
     total_delta: Разница общаяя
     from_including: Начиная с (включительно)
     to: До
+    submit:
+      create: "Отправить"
+      update: "Отправить"
+    disable_with: 'Идет отправка...'
