--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -128,6 +128,9 @@ ru:
         error:
           title: Произошла непредвиденная ошибка
           message: Пожалуйста, обратитесь в техподдержку
+    accounts:
+      index:
+        title: Список ваших аккаунтов
   public:
     sessions:
       form:
