--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -70,7 +70,7 @@ ru:
         created_at: Создано
         applicant: Заявитель
         country: Страна
-        legacy_verification_id: Легаси ID
+        legacy_external_id: Легаси ID
         status: Статус
         comment: Комментарий
         documents: Документы
