--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -4,7 +4,7 @@ ru:
       defaults:
         created_at_gteq: ''
         created_at_lt: ''
-        legacy_verification_id_cont: '1234567'
+        legacy_external_id_cont: '1234567'
         document_number_cont: '777 888888'
         name_or_last_name_or_patronymic_cont: 'Griogriy Ivanov'
         first_name_or_last_name_or_patronymic_cont: 'Griogriy Ivanov'
@@ -12,13 +12,13 @@ ru:
       defaults:
         created_at_gteq: ''
         created_at_lt: ''
-        legacy_verification_id_cont: ''
+        legacy_external_id_cont: ''
         document_number_cont: 'Номер паспорта'
     labels:
       defaults:
         created_at_gteq: 'Создано после:'
         created_at_lt: 'Создано до:'
-        legacy_verification_id_cont: 'ID содержит:'
+        legacy_external_id_cont: 'ID содержит:'
         document_number_cont: 'Номер паспорта содержит:'
         name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
         first_name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
