[#181694809] rename legacy verification id to legacye external id (#64)
* rename legacy verification id to legacye external id

* fix uniq

* fix uniq

* fix

* legacy_id

* remove legacy id

* rename raw_changebot to external_id

* fix

* schema update

Co-authored-by: Alexander Logunov <unlovedru@gmail.com>

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -70,11 +70,11 @@ ru:
         created_at: Создано
         applicant: Заявитель
         country: Страна
-        legacy_verification_id: Легаси ID
+        legacy_external_id: Легаси ID
         status: Статус
         comment: Комментарий
         documents: Документы
-        raw_changebot: Легаси JSON
+        external_json: Легаси JSON
         reason: Причина обращения
         name: Имя
         full_name: ФИО
