--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,7 +15,7 @@ ru:
         message: Для вашего аккаунта (%{account_id}) подача заявок была заблокирована
       new:
         title:  'Заявка на верификацию аккаунта #%{account_id} в %{org}'
-        from_to_size:  'Размер файла:  От %{from} до %{to}'
+        document_hint:  'Размер файла:  От %{from} до %{to} <br> Минимальное количество файлов:  %{amount}'
       created:
         title: 'Принята заявка #%{id}'
         message: '<div ng-show="vm.submited" style="text-align: justify; font-size: 1em;" class="ng-binding">
