add birth date and gender

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -49,6 +49,9 @@ ru:
       profile: 'Профиль организации'
 
   attributes:
+    genders:
+      male: Мужчина
+      female: Женщина
     reasons:
       unban: 'Разблокировка учетной записи'
       trusted_trader: 'Стать доверенным торговцем'
