--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -4,6 +4,7 @@ ru:
     format: "%{attribute} %{message}"
     messages:
       at_least_3_documents: необходимо прикрепить не менее 3 документов
+      over_18_years_old: необходимо иметь возраст от 18 лет
       accepted: нужно подтвердить
       blank: не может быть пустым
       confirmation: не совпадает со значением поля %{attribute}
