wrong barong uid error page

--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -42,3 +42,4 @@ ru:
         other: неверной длины (может быть длиной ровно %{count} символа)
     humanized_error:
       cant_edit_legacy_verification: Нельзя редактировать устаревшие записи
+      invalid_barong_uid: Эта страница верификации более не действительна, пожалуйста получите новую ссылку на верификацию или обратитесь в техподдержку
