add datepicker formats

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,7 @@
 ru:
+  date:
+    formats:
+      datepicker: YYYY-MM-DD
   verification:
     success_sending: 'Данные отправлены'
   are_you_sure?: Уверен?
