--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -70,6 +70,7 @@ ru:
         description: Описание
         final: Окончательный
       verification:
+        applicant_comment: Дополнительная информация (об утерянном аккаунте)
         created_at: Создано
         applicant: Заявитель
         country: Страна
