--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -3,6 +3,7 @@ ru:
   errors:
     format: "%{attribute} %{message}"
     messages:
+      applicant_comment_restore_info: необходимо указать информацию о прошлых аккаунтах, при восстановлении
       at_least_3_documents: необходимо прикрепить не менее 3 документов
       over_18_years_old: необходимо иметь возраст от 18 лет
       accepted: нужно подтвердить
