--- a/config/locales/admin.ru.yml
+++ b/config/locales/admin.ru.yml
@@ -1,5 +1,8 @@
 ru:
   admin:
+    members:
+      show:
+        settings: Настройки
     accounts:
       verification_callback_test:
         result: 'Результат'
