--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,9 @@ ru:
   titles:
     application: Агнесса
   application:
+    not_authorized:
+      title: Нет доступа
+      message: У вас нет доступа к этой странице
     index:
       total_records: 'Всего записей: %{count}'
     summary:
