--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -44,4 +44,6 @@ ru:
         other: неверной длины (может быть длиной ровно %{count} символа)
     humanized_error:
       cant_edit_legacy_verification: Нельзя редактировать устаревшие записи
+      unauthorized_member: У вас нет доступа к этой страницы
+      archived_member: Ваш пользователь не активен
       invalid_barong_uid: Эта страница верификации более не действительна, пожалуйста получите новую ссылку на верификацию или обратитесь в техподдержку
