--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -57,6 +57,7 @@ ru:
       users: 'Пользователи'
       review_result_labels: 'Статусы верификаций'
       profile: 'Профиль организации'
+      log_records: 'Журнал событий'
 
   attributes:
     genders:
