--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -1,6 +1,9 @@
 ru:
   activerecord:
     models:
+      log_record:
+        one: Журнал событий
+        many: Журнал событий
       account:
         one: Аккаунт
         many: Аккаунты
