--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -45,5 +45,6 @@ ru:
     humanized_error:
       cant_edit_legacy_verification: Нельзя редактировать устаревшие записи
       unauthorized_member: У вас нет доступа к этой страницы
+      admin_member: Необходимо быть администратором
       archived_member: Ваш пользователь не активен
       invalid_barong_uid: Эта страница верификации более не действительна, пожалуйста получите новую ссылку на верификацию или обратитесь в техподдержку
