--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,10 @@ ru:
   titles:
     application: Агнесса
   application:
+    user_dropdown:
+      settings: 'Профиль пользователя'
+      exit: 'Выход'
+      signin: 'Войти'
     index:
       total_records: 'Всего записей: %{count}'
     summary:
@@ -47,7 +51,9 @@ ru:
     all: Все
 
   shared:
+
     navbar:
+      operators_desktop: 'Рабочий стол оператора'
       verifications: 'Заявки'
       applicants: 'Заявители'
       verification_new: 'Тестовая заявка'
