[#181791322] invites for users

--- a/config/locales/flashes.ru.yml
+++ b/config/locales/flashes.ru.yml
@@ -14,3 +14,5 @@ ru:
     users:
       create:
         notice: Поздравляю, вы зарегистрированы! Можете установить свой пароль в профиле
+    invite_accepted: Приглашение принято, вы зарегистрированы!
+    invited: Отправлено приглашений %{count}
