--- a/config/locales/user_mailer.ru.yml
+++ b/config/locales/user_mailer.ru.yml
@@ -1,5 +1,9 @@
 ru:
   user_mailer:
+    invite:
+      instruction: 'Пройдите по ссылке чтобы воспользоваться приглашением:'
+      subject: Приглашение в tasky.online
+      title: "%{inviter} пригласил Вас участвовать в %{brand}."
     reset_password_email:
       instruction: 'Пройдите по этой ссылке чтобы установить новый пароль:'
       subject: Восстановление доступа
