--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -47,3 +47,5 @@ ru:
       unauthorized_member: У вас нет доступа к этой страницы
       archived_member: Ваш пользователь не активен
       invalid_barong_uid: Эта страница верификации более не действительна, пожалуйста получите новую ссылку на верификацию или обратитесь в техподдержку
+      cant_accept_logout: Выйдите из системы чтобы воспользоваться ссылкой-приглашением
+      link_expired: Данная ссылка уже устарела. Попросите новый инвайт
