--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -1,6 +1,9 @@
 ru:
   activerecord:
     models:
+      log_record:
+        one: Журнал событий
+        many: Журнал событий
       account:
         one: Аккаунт
         many: Аккаунты
@@ -22,6 +25,8 @@ ru:
         password_confirmation: Подтверждение пароля
       log_record:
         action: Действие
+        full_name: Полное имя
+        document_number: Номер документа
         verification: Заявка
         moderator_id: Модератор
         created_at: Дата
