Feature/operator desktop [#181956239] (#116)
* Add before_action

* Skip verifications_controller.rb

* add trait admin

* different next path for diffirent roles

* fix specs

* fix specs

* navbar for roles

* ???

* Add operators scope

* Improve operators scope

* Add reason for dashboard

* Reason Filter

* Add account to scope

* Rename

* add navbar search

* rename

* Navbar search on dashboard

* Remova active member

* Authorize admin

* Remove is_operator is is_admin

* rename desktop
desktop can see everyone

* fix

* Replace navbar

* scope to all

* Hide if count 0

* Rename error

* Similar path for operator

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,10 @@ ru:
   titles:
     application: Агнесса
   application:
+    user_dropdown:
+      settings: 'Профиль пользователя'
+      exit: 'Выход'
+      signin: 'Войти'
     index:
       total_records: 'Всего записей: %{count}'
     summary:
@@ -47,7 +51,9 @@ ru:
     all: Все
 
   shared:
+
     navbar:
+      desktop: 'Рабочий стол'
       verifications: 'Заявки'
       applicants: 'Заявители'
       verification_new: 'Тестовая заявка'
