--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -133,6 +133,9 @@ ru:
   admin:
     verification_statistics:
       form:
-        group:
-          operator: Операторы
+        subject_groups:
+          moderator_id: Операторы
           reason: Причины
+        date_groups:
+          day: День
+          month: Месяц
