Validate verifiaction_documents

--- a/config/locales/errors.ru.yml
+++ b/config/locales/errors.ru.yml
@@ -5,6 +5,7 @@ ru:
     messages:
       applicant_comment_restore_info: необходимо указать информацию о прошлых аккаунтах, при восстановлении
       at_least_3_documents: необходимо прикрепить не менее 3 документов
+      wrong_verification_documents: Документы не соотвествуют данному аккаунту
       over_18_years_old: необходимо иметь возраст от 18 лет
       accepted: нужно подтвердить
       blank: не может быть пустым
