--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -105,6 +105,10 @@ ru:
           pending: Ожидание
           confirmed: Подтверждено
           refused: Отклонено
+        public_statuses:
+          pending: На рассмотрении
+          confirmed: Подтверждено
+          refused: Отклонено
     errors:
       models:
         verification:
