[#182435499] verification status statistics

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -143,6 +143,7 @@ ru:
         subject_groups:
           moderator_id: Операторы
           reason: Причины
+          status: Статус
         date_groups:
           day: День
           month: Месяц
