--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -27,7 +27,7 @@ ru:
         name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
         first_name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
       verification:
-        citizenship_country_id: 'Гражданство'
+        citizenship_country_iso_code: 'Гражданство'
         citizenship_country: 'Гражданство'
         reason: 'Причина обращения'
         status: 'Статус'
