Feature/desktop form [#182319356] (#153)

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,6 @@
 ru:
+
+
   date:
     formats:
       date_picker: '%Y-%m-%d'
@@ -30,8 +32,11 @@ ru:
       verified:
         message: Ваш аккаунт (%{account_id}) уже прошел проверку
       new:
-        applicant_comment_placeholder: Комментарий, информация об утерянном аккаунте, почта, прошлый ID...
-        title:  'Заявка на верификацию аккаунта %{account_id} в %{org}'
+        title: 'Верификация аккаунта'
+        personal_data: 'Личные данные'
+        choose_document_type: 'Выберите тип документа'
+        upload_document_photo: 'Загрузите фото документов'
+        submit: 'Продоложить'
         last_refused_title: 'Ваша последняя заявка была отклонена по причине:'
       document_field:
         document_hint:  'Размер файла:  От %{from} до %{to}'
@@ -81,6 +86,12 @@ ru:
       trusted_trader: 'Стать доверенным торговцем'
       restore: 'Восстановление утерянного аккаунта'
       other: 'Другое'
+    document_types:
+      passport: Паспорт
+      id_card: ID карта
+      driver_license: Водительские права
+      foreign_passport: Загранпаспорт
+
   period: Период
   income:
     total:
