--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -31,10 +31,11 @@ ru:
         citizenship_country: 'Гражданство'
         reason: 'Причина обращения'
         status: 'Статус'
-        email: 'Email, на который придет уведомление о статусе заявки'
-        document_number: 'Серия и Номер документа'
-        name: 'Ваше Имя'
-        last_name: 'Ваша Фамилия'
+        email: 'Email, на который придет уведомление о верификации'
+        document_number: 'Серия и номер документа'
+        name: 'Ваше имя'
+        last_name: 'Ваша фамилия'
+        patronymic: 'Ваше отчество'
     "yes": 'Yes'
     "no": 'No'
     required:
