Add Doucment type to verification
# Conflicts:
#	app/helpers/application_helper.rb
#	app/models/verification.rb
#	app/views/client/verifications/new.html+desktop.slim
#	db/schema.rb

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,10 @@
 ru:
+  available_documents:
+    passport: Паспорт
+    id_card: ID карта
+    driver_license: Водительские права
+    foreign_passport: Загранпаспорт
+
   date:
     formats:
       default: "%d.%m.%Y"
