Add new Verification layout to :created

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -52,6 +52,7 @@ ru:
           <p class="h6 mt-4 font-weight-normal">Мы рассмотрим Вашу заявку в ближайшее время, результат отправим на email, указанный Вами при верификации</p>
           <p class="h6 mt-3 small text-muted">срок рассмотрения заявки:<br>1 час в рабочее время, но не более 12 часов</p>
         </div>'
+        button: 'Перейти на сайт bitzlato''
 
   status:
     all: Все
