fix: Points 11, 12, 16, 17 of bug list

--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -31,7 +31,7 @@ ru:
         citizenship_country: 'Гражданство'
         reason: 'Причина обращения'
         status: 'Статус'
-        email: 'Email, на который придет уведомление о верификации'
+        email: 'Email, на который придет ответ по верификации'
         document_number: 'Серия и номер документа'
         name: 'Ваше имя'
         last_name: 'Ваша фамилия'
