--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -48,6 +48,13 @@ ru:
         clear_face: Убедитесь, что Ваше лицо и все детали документов на фото четко видны
         full_document: Документ на фото размещен полностью, края не обрезаны
         no_objects: На фото нет дополнительных объектов
+        explain: 'Верификация аккаунта дает множество преимуществ. Вы сможете подать заявку на верификацию за 4 шага:'
+        you_need: 'Вам потребуется:'
+        select_personal_data: Указать личные данные
+        select_document_type: Указать тип документа и его номер
+        make_document_photo: Сделать фото действительного документа, удостоверяющего личность
+        make_selfie: 'Сделать селфи с документом и листком бумаги, где написаны текущая дата и фраза "для криптобанка Bitzlato"'
+        do_verification: 'Пройти верификацию'
       mobile_alert_error:
         last_refused_title: 'Ваша последняя заявка была отклонена по причине:'
       document_field:
